# mosdex-python

./: LICENSE  MOSDEXSchemaV2-1.json  README.md  pyproject.toml  requirements.txt  sailco.ipynb  sailco_2-1.json  setup.py
data/: MOSDEXSchemaV1-2-ajk.json  MOSDEXSchemaV1-3-ajk.json  MOSDEXSchemaV2-0.json  MOSDEXSchemaV2-1.json  cuttingStock_1-2.json  cuttingStock_1-3.json  sailco.db  sailco_1-2.json  sailco_1-3.json  sailco_1.3-ajk.json  sailco_2-0.json  sailco_2-1.json  test_1-2.json
dev/: test-sqlalchemy-pandas.py
dev/mosdexV2-1/: MOSDEXSchemaV2-1.json  initialize_database.py  mosdex_processor.py  mosdex_table.py  mosdex_table_process_instance.py  mosdex_table_utils.py  sailco.ipynb  sailco.py  sailco_2-1-stoch.json  sailco_2-1.json  stochastic.ipynb  table_creation_utils.py
dev/mosdexV2-2/: granite-chat-mosdex-table.txt  mosdex_table.py  mosdex_table_process_query.py
mosdex/: generate_OSI.py  read.py  records.py
mosdex_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: sailco.ipynb
samples/: sailco.ipynb  sailco.py  sailcoV1.py  sailcoV2.py
src/: abstract1.py  dict_to_obj.py  read-mosdex.py  read.py  schema-validator-example.py
src/mosdex/: __init__.py  exceptions.py  generate_OSI.py  mosdex.py  mosdexV1.py  mosdexV2.py  mosdexV2Factory.py  mosdex_base.py  mosdex_classes.py  mosdex_data.py  mosdex_database.py  mosdex_db.py  read.py  read_MOSDEX.py  records.py
