[tool.poetry]
name = "mosdex-python"
version = "0.1.1"
description = "python project for testing Mosdex"
authors = ["Alan King <kingaj@us.ibm.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
records = "^0.6.0"
pandas = "^2.2.2"
jsonschema = "^4.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
