[project]
name = "mosdex-python"
version = "0.2.1"
description = "python project for testing Mosdex"
authors = [{name = "Alan King", email = "alan.king@ars-proba.net"}]
license = "MIT"
readme = "README.md"

requires-python = ">= 3.9"
dependencies = ["sqlalchemy",
                "prettytable",
                "pandas",
                "numpy",]



[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
